Update: Hide error handling on initial load

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,8 @@
     <br>
     <button onclick="fetchStockData()">Get Data</button>
 
-    <div id="loading">Fetching data...</div>
-    <div id="error">An error occurred while fetching data.</div>
+    <div id="loading" style="display: none;">Fetching data...</div>
+    <div id="error" style="display: none;">An error occurred while fetching data.</div>
     <div id="results"></div>
     <canvas id="stockChart"></canvas>
 
