--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>Stock Market Analysis Tool TEST</h1>
+    <h1>Stock Market Analysis Tool</h1>
 
     <div class="input-container">
         <label for="symbol">Stock Symbol:</label>
