--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,28 @@
 </head>
 
 <body>
+    
+    <nav>
+        <figure>
+            <p class="text-logo">.ts( )</p>
+            <img id="" src="" alt="">
+        </figure>
+        <ul class="nav__link--list">
+            <li class="nav__link" onclick="toggleModal()">
+                <a href="#" class="nav__link--anchor link__hover-effect link__hover-effect--black">.about( )</a>
+            </li>
+            <li class="nav__link">
+                <a href="#projects" class="nav__link--anchor link__hover-effect link__hover-effect--black">.projects( )</a>
+            </li>
+            <li class="nav__link" onclick="toggleModal()">
+                <a href="#" class="nav__link--anchor link__hover-effect link__hover-effect--black">.contact( )</a>
+            </li>
+            <li class="nav__link click" onclick="toggleContrast()">
+                <a href="#" class="nav__link--anchor link__hover-effect link__hover-effect--black"><i class="fas fa-adjust"></i></a>
+            </li>
+        </ul>
+    </nav>
+
     <h1>Stock Market Analysis Tool</h1>
 
     <div class="input-container">
