--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    
+
     <nav>
         <figure>
             <p class="text-logo">.ts( )</p>
@@ -45,31 +46,30 @@
         <button onclick="fetchStockData()">Get Data</button>
     </div>
 
-<!-- Backtesting Configuration Panel -->
-<div class="backtest-container">
-    <h2>Backtesting Configuration</h2>
-    <label for="starting_balance">Starting Balance ($):</label>
-    <input type="number" id="starting_balance" min="1" value="100000">
-    <label for="strategy">Select Strategy:</label>
-    <select id="strategy">
-        <option value="goldenCross">Golden Cross</option>
-        <!-- Other strategies can be added here -->
-    </select>
-    <div id="strategy-params">
-        <!-- Parameters for the selected strategy will be displayed here -->
+    <!-- Backtesting Configuration Panel -->
+    <div class="backtest-container">
+        <h2>Backtesting Configuration</h2>
+        <label for="starting_balance">Starting Balance ($):</label>
+        <input type="number" id="starting_balance" min="1" value="100000">
+        <label for="strategy">Select Strategy:</label>
+        <select id="strategy">
+            <option value="goldenCross">Golden Cross</option>
+            <!-- Other strategies can be added here -->
+        </select>
+        <div id="strategy-params">
+            <!-- Parameters for the selected strategy will be displayed here -->
+        </div>
+        <label for="allocation">Trade Allocation (%):</label>
+        <input type="range" id="allocation" min="1" max="100" value="100" oninput="updateAllocationValue(this.value)">
+        <span id="allocationValue">100</span>%
+        <label for="stoploss">Stop Loss (%):</label>
+        <input type="range" id="stoploss" min="0" max="100" value="10" oninput="updateStopLossValue(this.value)">
+        <span id="stopLossValue">10</span>%
+        <label for="takeprofit">Take Profit (%):</label>
+        <input type="range" id="takeprofit" min="0" max="100" value="10" oninput="updateTakeProfitValue(this.value)">
+        <span id="takeProfitValue">10</span>%
+        <button onclick="backTestStrategy()">Run Backtest</button>
     </div>
-    <label for="allocation">Trade Allocation (%):</label>
-    <input type="range" id="allocation" min="1" max="100" value="100" oninput="updateAllocationValue(this.value)">
-    <span id="allocationValue">100</span>%
-    <label for="stoploss">Stop Loss (%):</label>
-    <input type="range" id="stoploss" min="0" max="100" value="10" oninput="updateStopLossValue(this.value)">
-    <span id="stopLossValue">10</span>%
-    <label for="takeprofit">Take Profit (%):</label>
-    <input type="range" id="takeprofit" min="0" max="100" value="10" oninput="updateTakeProfitValue(this.value)">
-    <span id="takeProfitValue">10</span>%
-    <button onclick="backTestStrategy()">Run Backtest</button>
-</div>
-
 
     <div id="loading">Fetching data...</div>
     <div id="error">An error occurred while fetching data.</div>
@@ -82,6 +82,7 @@
 </body>
 
 </html>
+
 
 
 
