Update: UI impovements

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
     <nav>
         <figure>
-            <p class="text-logo">.ts( )</p>
+            <p class="text-logo">.ts("stock market analysis tool")</p>
             <img id="" src="" alt="">
         </figure>
         <ul class="nav__link--list">
@@ -34,7 +34,7 @@
         </ul>
     </nav>
 
-    <h1>Stock Market Analysis Tool</h1>
+
 
     <div class="input-container">
         <label for="symbol">Stock Symbol:</label>
