Update: UI impovements

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -857,17 +857,10 @@ nav {
 
 /* Overriding the input styles */
 input[type="text"], input[type="date"], input[type="number"], input[type="range"], select {
-    background-color: #f4f4f4;
+    background-color: #a7a7a7;
     width: 200px; /* fixed width */
 }
 
-/* Making the navbar responsive */
-nav {
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2); /* Adding a shadow for better appearance */
-}
 
 /* Setting the width of the nav items to spread out and cover the entire width */
 .nav__link--list {
