Update: UI impovements

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
     <nav>
         <figure>
-            <p class="text-logo">.ts("stock market analysis tool")</p>
+            <p class="text-logo">.ts(sma tool)</p>
             <img id="" src="" alt="">
         </figure>
         <ul class="nav__link--list">
