--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -868,11 +868,29 @@ input[type="text"], input[type="date"], input[type="number"], input[type="range"
 .backtest-container {
     flex: 1;
     max-width: calc(50% - 10px);
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
     gap: 10px;
 }
 
+/* Style for labels within the backtest-container */
+.backtest-container label {
+    grid-column: 1 / 2;
+}
+
+/* Style for the slider containers within the backtest-container */
+.slider-container {
+    grid-column: 2 / 3;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+/* Style to ensure that percentage is right next to the slider */
+.slider-container span {
+    margin: 0;
+}
 
 /* Responsive layout for smaller screens */
 @media (max-width: 768px) {
@@ -885,36 +903,26 @@ input[type="text"], input[type="date"], input[type="number"], input[type="range"
         max-width: 100%;
         width: 100%;
     }
-}
 
+    .backtest-container {
+        grid-template-columns: 1fr;
+    }
 
-/* Style for the slider containers */
-.slider-container {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
+    .backtest-container label, 
+    .slider-container {
+        grid-column: 1 / -1;
+    }
 
-/* Style to ensure that percentage is right next to the slider */
-.slider-container span {
-    margin: 0;
-}
-
-/* Responsive styles for the sliders */
-@media (max-width: 480px) {
     .slider-container {
         flex-direction: column;
         align-items: stretch;
     }
+
     .slider-container input[type="range"] {
         width: 100%;
     }
+
     .slider-container span {
         align-self: flex-end;
     }
 }
-
-
-
-
-
