--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -46,14 +46,14 @@ input[type="text"], input[type="date"], button {
 }
 
 button {
-    background-color: #007BFF;
+    background-color: #f06449;
     color: #fff;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #e47d68;
 }
 
 table {
