--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -926,3 +926,7 @@ input[type="text"], input[type="date"], input[type="number"], input[type="range"
         align-self: flex-end;
     }
 }
+#stockChart {
+    width: 100%;
+    height: 400px;
+}
