--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -927,6 +927,7 @@ input[type="text"], input[type="date"], input[type="number"], input[type="range"
     }
 }
 #stockChart {
-    width: 100%;
-    height: 400px;
+    width: 90% !important;
+    display: block;
+    margin: 0 auto;
 }
